--- a/app/src/main/res/layout/activity_post_editor.xml
+++ b/app/src/main/res/layout/activity_post_editor.xml
@@ -27,11 +27,35 @@
         app:layout_constraintTop_toBottomOf="@+id/et_title"
         />
 
+    <TextView
+        android:id="@+id/textViewTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:text="Article Content"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/et_location" />
+
+    <TextView
+        android:id="@+id/editorTextView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="16dp"
+        android:text="Text View"
+        app:layout_constraintBottom_toTopOf="@+id/button_save_file"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />
+
     <Button
         android:id="@+id/button_save_file"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="16dp"
         android:backgroundTint="#009688"
         android:foregroundTint="#FFFFFF"
         android:text="@string/post_save"
