the point before everything breaks

--- a/app/src/main/res/layout/activity_post_editor.xml
+++ b/app/src/main/res/layout/activity_post_editor.xml
@@ -27,6 +27,8 @@
         app:layout_constraintTop_toBottomOf="@+id/et_title"
         />
 
+    <include android:id="@+id/rte_toolbar_container" layout="@layout/rte_toolbar" />
+
     <com.onegravity.rteditor.RTEditText
         android:id="@+id/rtEditText"
         android:layout_width="0dp"
