--- a/app/src/main/res/layout/activity_post_editor.xml
+++ b/app/src/main/res/layout/activity_post_editor.xml
@@ -35,7 +35,7 @@
         android:layout_height="0dp"
         android:layout_marginBottom="16dp"
         android:gravity="top"
-        android:hint="Text View"
+        android:hint="@string/editor_hint"
         android:imeOptions="actionDone|flagNoEnterAction"
         android:inputType="textMultiLine|textAutoCorrect|textCapSentences"
         app:layout_constraintBottom_toTopOf="@+id/button_save_file"
