--- a/app/src/main/res/layout/fragment_wifi_direct.xml
+++ b/app/src/main/res/layout/fragment_wifi_direct.xml
@@ -14,8 +14,10 @@
         android:textAlignment="center"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
     <Button
         android:id="@+id/button_direct_scan"
         android:layout_width="wrap_content"
