--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/nav_gallery"
-        android:name="com.jonathanxu.hacklodge.ui.gallery.GalleryFragment"
+        android:name="com.jonathanxu.hacklodge.ui.feed.FeedFragment"
         android:label="@string/menu_gallery"
         tools:layout="@layout/fragment_feed" />
 
