subtitles and more fields work now NOT SECURE oops

--- a/app/src/main/res/layout/activity_post_editor.xml
+++ b/app/src/main/res/layout/activity_post_editor.xml
@@ -10,22 +10,26 @@
         android:id="@+id/et_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:ems="15"
         android:hint="@string/post_title"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/et_subtitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="15"
+        android:hint="Subtitle"
+        app:layout_constraintTop_toBottomOf="@+id/et_title" />
 
     <EditText
         android:id="@+id/et_location"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:ems="15"
         android:hint="@string/post_location"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_title"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/et_subtitle" />
 
     <include
         android:id="@+id/rte_toolbar_container"
@@ -41,28 +45,16 @@
         android:id="@+id/rtEditText"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="16dp"
         android:gravity="top"
         android:hint="@string/editor_hint"
         android:imeOptions="actionDone|flagNoEnterAction"
         android:inputType="textMultiLine|textAutoCorrect|textCapSentences"
-        app:layout_constraintBottom_toTopOf="@+id/button_save_file"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rte_toolbar_container"
         app:layout_constraintVertical_bias="0.0" />
 
-    <Button
-        android:id="@+id/button_save_file"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:backgroundTint="#009688"
-        android:foregroundTint="#FFFFFF"
-        android:text="@string/post_save"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
