--- a/app/src/main/res/layout/activity_post_editor.xml
+++ b/app/src/main/res/layout/activity_post_editor.xml
@@ -26,29 +26,17 @@
         app:layout_constraintTop_toBottomOf="@+id/et_title"
         android:inputType="text"/>
 
-    <RelativeLayout
-        android:id="@+id/address_bar"
-        android:layout_width="fill_parent"
+
+    <AutoCompleteTextView
+        android:id="@+id/et_location"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_subtitle">
-
-        <EditText
-            android:id="@+id/et_location"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:ems="15"
-            android:hint="@string/post_location" />
-
-        <Button
-            android:id="@+id/search_location"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:text="Search" />
-
-    </RelativeLayout>
+        android:layout_alignParentStart="true"
+        android:ems="15"
+        android:hint="@string/post_location"
+        app:layout_constraintEnd_toEndOf="@+id/rtEditText"
+        app:layout_constraintStart_toStartOf="@+id/rtEditText"
+        app:layout_constraintTop_toBottomOf="@+id/et_subtitle" />
 
     <include
         android:id="@+id/rte_toolbar_container"
@@ -58,7 +46,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/address_bar" />
+        app:layout_constraintTop_toBottomOf="@+id/et_location" />
 
     <com.onegravity.rteditor.RTEditText
         android:id="@+id/rtEditText"
